finish up /v1/mods/{id}/versions/latest
